Sun Jun 27 10:41:38 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rubygems/require_paths_builder.rb (write_require_paths_file_if_needed):
	  no reason that bin directory should be included in $LOAD_PATH.
	  it is for executable files, but not libraries.  [ruby-core:25936]

Sat Jun 26 11:56:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (clear-installed-list): put redirection before set
	  command, since it seems to be handled by nmake in special way.
	  [ruby-dev:41711]

Fri Jun 25 06:24:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/un.rb (httpd): MaxClients also should be integer.
	  [ruby-dev:41724] [Bug #3477]

	* lib/un.rb (setup): fix of word splitting.  [ruby-dev:41723]
	  [Bug #3476]

Wed Jun 16 01:38:40 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/fiddle/extconf.rb: check ffi.h even when pkg-config succeeded.
	  On Debian/lenny, which is a "supported" platform, ffi.h is installed
	  in /usr/include/i486-linux-gnu/.  This causes build error when using
	  gcc whose target is not i486-linux-gnu.

Tue Jun 15 17:14:58 2010  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/fiddle/extconf.rb: De Morgan's laws.

Tue Jun 15 12:09:00 2010  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/fiddle/extconf.rb: use pkg_config to find ffi.h.

Wed Jun 16 00:04:38 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_io.rb (safe_4): does not use Timeout because
	  Timeout.timeout uses Thread#kill which raises SecurityError when
	  $SAFE == 4.  based on a patch from Tomoyuki Chikanaga.
	  [ruby-dev:41484]

	* test/ruby/test_io.rb (test_print_separators): use pipe (test helper
	  method) instead of IO.pipe.  [ruby-dev:41484]

Mon Jun 14 04:03:55 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/fiddle/closure.c (dealloc): refix workaround r28300.
	  don't use ffi_closure_alloc, ffi_prep_closure_loc and
	  ffi_closure_free on MACOSX and __linux__.
	  [ruby-dev:41483] [ruby-dev:41214]

Sun Jun 13 15:46:07 2010  Yusuke Endoh  <mame@tsg.ne.jp>
